# t2sz

./: .gitignore  APKBUILD  CMakeLists.txt  FUZZING.md  PKGBUILD  README.md  TESTING.md
.github/workflows/: aur.yml  deploy.yml  test.yml
fuzz/: CMakeLists.txt  fuzz_cli.c  fuzz_tar_mmap.c  fuzz_tar_stdin.c  gen_corpus.sh
snap/: snapcraft.yaml
src/: mman_compat.h  t2sz.c
tests/: CMakeLists.txt  gen_blob.c  helpers.sh  lsan_suppressions.txt  test_coverage.sh  test_error_paths.sh  test_roundtrip.sh
windows/: win-cross-build.sh  win-cross-setup.sh  win-cross-test.sh
